--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
         integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
 
-    <!-- animation -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+    <!-- fullpage -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/2.9.7/jquery.fullpage.css"
+        integrity="sha512-/AilQf/shuEGfh8c3DoIqcIqHZCKpiImSyt+fxIKJphHiNa6QMPb6AbDly6rkjmGr/5OZd35JtvVkbEKnCZO+A=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <!-- common -->
     <link rel="stylesheet" href="./css/common.css">
@@ -24,33 +26,59 @@
     <div id="wrap">
         <!-- header -->
         <header class="w-100 position-fixed d-flex align-items-center justify-content-between">
-            <strong class="fs-24">Web Portfolio</strong>
-            <a class="btn-link" target="_blank" rel="noopener"
-                href="https://mail.google.com/mail/?view=cm&amp;fs=1&amp;to=mincheol.kmc@gmail.com">mincheol.kmc@gmail.com</a>
+            <strong class="fs-24 text-white">Web Portfolio</strong>
+            <nav>
+                <ol class="d-flex align-items-center">
+                    <li><a href=""><span>01.</span>
+                            <h6>소개</h6>
+                        </a></li>
+                    <li><a href=""><span>02.</span>
+                            <h6>경력사항</h6>
+                        </a></li>
+                    <li><a href=""><span>03.</span>
+                            <h6>프로젝트</h6>
+                        </a></li>
+                    <li><a href=""><span>04.</span>
+                            <h6>자격증 및 교육</h6>
+                        </a></li>
+                    <li><a href=""><span>05.</span>
+                            <h6>기술스택</h6>
+                        </a></li>
+                </ol>
+            </nav>
         </header>
 
-        <!-- page 1 -->
-        <section class="w-100 h-100 p-5 text-center">
-            <h1 class="typing1 font-weight-bold"></h1>
-            <h1 class="typing2 font-weight-bold"></h1>
+        <article id="fullpage">
+            <section class="section bg-dark">
+                <article class="slide text-center">
+                    <h1 class="typing1 font-weight-bold text-white"></h1>
+                    <h1 class="typing2 font-weight-bold text-white"></h1>
 
-            <!-- 스크롤 버튼 -->
-            <a class="scroll-link" href="#content">
-                <svg class="mouse" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 73 121"
-                    preserveAspectRatio="xMidYMid meet">
-                    <g fill="none" fill-rule="evenodd">
-                        <rect width="70" height="118" x="1.5" y="1.5" stroke="#000" stroke-width="3" rx="36" />
-                        <circle class="scroll" cx="36.5" cy="31.5" r="4.5" fill="#000" />
-                    </g>
-                </svg>
-            </a>
-        </section>
+                    <!-- 스크롤 버튼 -->
+                    <a class="scroll-link">
+                        <svg class="mouse" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 73 121"
+                            preserveAspectRatio="xMidYMid meet">
+                            <g fill="none" fill-rule="evenodd">
+                                <rect width="70" height="118" x="1.5" y="1.5" stroke="#fff" stroke-width="3" rx="36" />
+                                <circle class="scroll" cx="36.5" cy="31.5" r="4.5" fill="#fff" />
+                            </g>
+                        </svg>
+                    </a>
+                </article>
+            </section>
+        </article>
     </div>
 
+    <!-- jquery -->
     <script src="https://code.jquery.com/jquery-3.6.3.js"
         integrity="sha256-nQLuAZGRRcILA+6dMBOvcRh5Pe310sBpanc6+QBmyVM=" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js"
         integrity="sha256-xLD7nhI62fcsEZK2/v8LsBcb4lG7dgULkuXoXB/j91c=" crossorigin="anonymous"></script>
+
+    <!-- fullpage -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/2.9.7/jquery.fullpage.js"
+        integrity="sha512-XOpdFagEEv9XMxN/2EdvFL/PfGtFDjX+AkRznsFHDtdC05YWdkMnz5JZUfrbnEabOQaMc7YNTl2xPbOu3J858Q=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
     <script>
         var typingBool = false;
@@ -85,17 +113,11 @@
             }
         }
 
-        // 스크롤 버튼 누를 시 아래로 이동
-        jQuery(document).ready(function ($) {
-
-            $('a.scroll-link').click(function (e) {
-                e.preventDefault();
-                $id = $(this).attr('href');
-                $('body,html').animate({
-                    scrollTop: $($id).offset().top - 20
-                }, 750);
+        $(document).ready(function () {
+            $('#fullpage').fullpage({
+                //options here
+                autoScrolling: true,
             });
-
         });
     </script>
 
