--- a/index.html
+++ b/index.html
@@ -32,16 +32,16 @@
             <strong class="logo-link" data-aos-delay="100" data-aos="fade-down">Web Portfolio</strong>
             <nav>
                 <ol class="d-flex align-items-center">
-                    <li class="nav-item active" data-aos-delay="150" data-aos="fade-down"><a class="cursor-pointer" data-target="main"
-                            onclick="moveEvent(this)"><span>01</span>
+                    <li class="nav-item active" data-aos-delay="150" data-aos="fade-down"><a class="cursor-pointer"
+                            data-target="main" onclick="moveEvent(this)"><span>01</span>
                             <h5>Main</h5>
                         </a></li>
-                    <li class="nav-item" data-aos-delay="300" data-aos="fade-down"><a class="cursor-pointer" data-target="about"
-                            onclick="moveEvent(this)"><span>02</span>
+                    <li class="nav-item" data-aos-delay="300" data-aos="fade-down"><a class="cursor-pointer"
+                            data-target="about" onclick="moveEvent(this)"><span>02</span>
                             <h5>About</h5>
                         </a></li>
-                    <li class="nav-item" data-aos-delay="450" data-aos="fade-down"><a class="cursor-pointer" data-target="exp_pro"
-                            onclick="moveEvent(this)"><span>03</span>
+                    <li class="nav-item" data-aos-delay="450" data-aos="fade-down"><a class="cursor-pointer"
+                            data-target="exp_pro" onclick="moveEvent(this)"><span>03</span>
                             <h5>Experience & Project</h5>
                         </a></li>
                 </ol>
@@ -50,12 +50,12 @@
 
         <section class="full-wrap h-100 m-auto">
             <!-- Main -->
-            <article class="article-box text-center pf-main" style="min-height: 100vh;">
+            <article id="main" class="article-box text-center pf-main" style="min-height: 100vh;">
                 <div>
-                    <h1 class="intro-text font-weight-bold text-white mb-2" data-aos-delay="500" data-aos="fade-up">
+                    <h1 class="intro-text font-weight-bold mb-2" data-aos-delay="500" data-aos="fade-up">
                         <span>안녕하세요!</span>
                     </h1>
-                    <h1 class="intro-text font-weight-bold text-white" data-aos-delay="600" data-aos="fade-up">
+                    <h1 class="intro-text font-weight-bold " data-aos-delay="600" data-aos="fade-up">
                         <span>웹퍼블리셔 <strong>김민철</strong>입니다.</span>
                     </h1>
                 </div>
@@ -65,75 +65,128 @@
                     <svg class="mouse" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 73 121"
                         preserveAspectRatio="xMidYMid meet">
                         <g fill="none" fill-rule="evenodd">
-                            <rect width="70" height="118" x="1.5" y="1.5" stroke="#fff" stroke-width="3" rx="36" />
-                            <circle class="scroll" cx="36.5" cy="31.5" r="4.5" fill="#fff" />
+                            <rect width="70" height="118" x="1.5" y="1.5" stroke="#000" stroke-width="3" rx="36" />
+                            <circle class="scroll" cx="36.5" cy="31.5" r="4.5" fill="#000" />
                         </g>
                     </svg>
                 </a>
+            </article>
 
+            <article class="article-box pf-intro">
                 <!-- 소개 -->
                 <ol class="main-intro-list">
-                    <li class="main-intro-item">
-                        <span class="main-intro-number">01.</span>
+                    <li class="main-intro-item" data-aos-delay="100" data-aos-duration="1000" data-aos="fade-up">
+                        <!-- <span class="main-intro-number">01.</span> -->
                         <strong class="main-intro-title">skills</strong>
                         <ul class="main-intro-sub-list">
-                            <li class="main-intro-sub-item">HTML, CSS, SCSS, javascript</li>
-                            <li class="main-intro-sub-item">photoshop, illustrator</li>
+                            <li class="main-intro-sub-item">- Html, Css, Scss, Javascript, Git</li>
+                            <li class="main-intro-sub-item">- Photoshop, Illustrator</li>
+                            <li class="main-intro-sub-item">- AutoCad, 3dMax, Sketchup</li>
                         </ul>
                     </li>
-                    <li class="main-intro-item">
-                        <span class="main-intro-number">02.</span>
+                    <li class="main-intro-item" data-aos-delay="200" data-aos-duration="1000" data-aos="fade-up">
+                        <!-- <span class="main-intro-number">02.</span> -->
                         <strong class="main-intro-title">experience</strong>
                         <ul class="main-intro-sub-list">
-                            <li class="main-intro-sub-item">야근몬스터(프론트엔드 개발)</li>
+                            <li class="main-intro-sub-item">- 야근몬스터 (프론트엔드)</li>
                         </ul>
                     </li>
-                    <li class="main-intro-item">
-                        <span class="main-intro-number">03.</span>
+                    <li class="main-intro-item" data-aos-delay="300" data-aos-duration="1000" data-aos="fade-up">
+                        <!-- <span class="main-intro-number">03.</span> -->
                         <strong class="main-intro-title">license</strong>
                         <ul class="main-intro-sub-list">
-                            <li class="main-intro-sub-item">GTQ 1급</li>
-                            <li class="main-intro-sub-item">정보처리기사(필기)</li>
-                            <li class="main-intro-sub-item">웹디자인기능사(필기)</li>
-                            <li class="main-intro-sub-item">ATC1, 2급</li>
-                            <li class="main-intro-sub-item">운전면서(2종보통)</li>
+                            <li class="main-intro-sub-item">- GTQ 1급</li>
+                            <li class="main-intro-sub-item">- 정보처리기사 (필기) *실기예정</li>
+                            <li class="main-intro-sub-item">- 웹디자인기능사 (필기) *실기예정</li>
+                            <li class="main-intro-sub-item">- ATC캐드마스터 1급 (ATC 1급)</li>
+                            <li class="main-intro-sub-item">- ATC캐드마스터 2급 (CAT 2급)</li>
+                            <li class="main-intro-sub-item">- 운전면허 (2종보통)</li>
                         </ul>
                     </li>
-                    <li class="main-intro-item">
-                        <span class="main-intro-number">04.</span>
+                    <li class="main-intro-item" data-aos-delay="400" data-aos-duration="1000" data-aos="fade-up">
+                        <!-- <span class="main-intro-number">04.</span> -->
                         <strong class="main-intro-title">education</strong>
                         <ul class="main-intro-sub-list">
-                            <li class="main-intro-sub-item">패스트 캠퍼스 (Web 개발 취업 스쿨 1학기)</li>
-                            <li class="main-intro-sub-item">하이미디어 아카데미 (웹퍼블리셔반)</li>
-                            <li class="main-intro-sub-item">가천대학교 (시각디자인과)</li>
+                            <li class="main-intro-sub-item">- 라인컴퓨터아트 (인테리어디자인)</li>
+                            <li class="main-intro-sub-item">- 그린컴퓨터아카데미 (AutoCad)</li>
+                            <li class="main-intro-sub-item">- 비트캠프 (Web 개발)</li>
+                            <li class="main-intro-sub-item">- 한국산업기술대학 (현 한국공학대학)</li>
+                            <!-- <li class="main-intro-sub-item">- UI/UX 엔지니어링 및 응용 SW엔지니어링 양성과정 수료</li> -->
                         </ul>
                     </li>
                 </ol>
             </article>
 
-            <!-- 01. 자기소개 -->
-            <article class="article-box pf-aboutme" id="main">
-                <h2 class="article-title" data-aos-delay="100" data-aos-duration="1000" data-aos="fade-up">
-                    <span>01.</span>
-                    자기소개
+            <!-- About -->
+            <article id="about" class="article-box pf-aboutme">
+                <h2 class="article-title" data-aos-delay="100" data-aos-duration="1000" data-aos="fade-right">
+                    <!-- <span>01.</span> -->
+                    About
                 </h2>
-                <div class="aboutme-wrap" data-aos-delay="200" data-aos-duration="1000" data-aos="fade-up">
-                    <div class="aboutme-text">
-                        안녕하세요. ~~~~~~~~~~~~~~~~~~~~~~~~~~~
-                    </div>
-                    <div class="aboutme-profile">
+                <div class="aboutme-wrap">
+                    <div class="aboutme-profile"  data-aos-delay="200" data-aos-duration="1000" data-aos="fade-left">
                         <img src="./image/tempimage.png" alt="">
+                    </div>
+                    <div class="aboutme-text"  data-aos-delay="300" data-aos-duration="1000" data-aos="fade-left">
+                        <div class="info">
+                            <div class="tag">Info</div>
+                            <div class="ml-3">
+                                <strong>김민철</strong> <font size="4">(1994. 12. 31)</font>
+                            </div>
+                        </div>
+                        <hr>
+                        <div class="skills">
+                            <div class="tag">Skills</div>
+                            <div class="ml-3">
+                                <span class="skill-text">Html, Css, Scss, Javascript, Photoshop, Illustrator, AutoCad, 3dMax, Sketchup
+                            </div>
+                        </div>
+                        <hr>
+                        <div class="license">
+                            <div class="tag">License</div>
+                            <div class="ml-3">
+                                <div class="get-date">2023. 01</div>
+                                <span class="get-name">GTQ 1급 </span> <font size="2" color="gray">한국생산성본부</font>
+                                <div class="get-date">2022. 12</div>
+                                <span class="get-name">ATC캐드마스터 2급 (CAT 2급)</span> <font size="2" color="gray">한국생산성본부</font>
+                                <div class="get-date">2022. 11</div>
+                                <span class="get-name">ATC캐드마스터 1급 (ATC 1급)</span> <font size="2" color="gray">한국생산성본부</font>
+                                <div class="get-date">2022. 06</div>
+                                <span class="get-name">웹디자인기능사필기 <font size="3">(23. 03 실기예정)</font></span> <font size="2" color="gray">한국산업인력공단</font>
+                                <div class="get-date">2022. 03</div>
+                                <span class="get-name">정보처리기사필기 <font size="3">(23. 04 실기예정)</font></span> <font size="2" color="gray">한국산업인력공단</font>
+                                <div class="get-date">2013. 11</div>
+                                <span class="get-name">2종보통운전면허</span>
+                                <!-- <font size="2" color="gray">한국산업인력공단</font> -->
+                            </div>
+                        </div>
+                        <hr>
+                        <div class="education">
+                            <div class="tag">Education</div>
+                            <div class="ml-3">
+                                <div class="get-date">2022. 09 ~ 2023. 03</div>
+                                <span class="get-name">환경인테리어디자인 (AutoCad, 3dMax, Sketchup) 수료예정</span> <font size="2" color="gray">라인컴퓨터아트</font>
+                                <div class="get-date">2022. 08 ~ 2022. 09</div>
+                                <span class="get-name">빠른설계를위한 AutoCad 수료(단기)</span> <font size="2" color="gray">그린컴퓨터아카데미</font>
+                                <div class="get-date">2019. 01 ~ 2019. 07</div>
+                                <span class="get-name">UI/UX엔지니어링 및 응용 sw엔지니어링 양성과정 수료</span> <font size="2" color="gray">비트캠프</font>
+                                <div class="get-date">2013. 03 ~ 2019. 02</div>
+                                <span class="get-name">한국산업기술대학교 학사</span>
+                                <div class="get-date">2010. 03 ~ 2013. 02</div>
+                                <span class="get-name">덕소고등학교 졸업</span>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </article>
 
             <!-- 02. 경력 & 프로젝트 -->
-            <article class="article-box pf-exprience" id="about">
-                <h2 class="article-title" data-aos-delay="100" data-aos-duration="1000" data-aos="fade-up">
-                    <span>02.</span>
-                    경력 & 프로젝트
+            <article id="exp_pro" class="article-box pf-exprience">
+                <h2 class="article-title" data-aos-delay="100" data-aos-duration="1000" data-aos="fade-right">
+                    <!-- <span>02.</span> -->
+                    <div>Experience</div><div style="margin-left:15rem">& Project</div>
                 </h2>
-                <div data-aos-delay="200" data-aos-duration="1000" data-aos="fade-up">
+                <div class="exprience-wrap" data-aos-delay="200" data-aos-duration="1000" data-aos="fade-up">
                     <div class="exprience-list">
                         <div class="list-nav">
                             <ul>
@@ -152,20 +205,6 @@
                         <div class="project-list">
 
                         </div>
-                    </div>
-                </div>
-            </article>
-
-            <!-- 03. 자격증 & 교육 -->
-            <article class="article-box pf-license-edu" id="exp_pro">
-                <h2 class="article-title" data-aos-delay="100" data-aos-duration="1000" data-aos="fade-up">
-                    <span>03.</span>
-                    자격증 및 교육
-                </h2>
-                <div class="license-edu-wrap" data-aos-delay="200" data-aos-duration="1000" data-aos="fade-up">
-                    <div class="license-edu-text">
-                        안녕하세요. ~~~~~~~~~~~~~~~~~~~~~~~~~~~
-                        ascasc
                     </div>
                 </div>
             </article>
