skill 이미지 추가 및 뷰 수정

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                             <li class="main-intro-sub-item">- 라인컴퓨터아트 (인테리어디자인)</li>
                             <li class="main-intro-sub-item">- 그린컴퓨터아카데미 (AutoCad)</li>
                             <li class="main-intro-sub-item">- 비트캠프 (Web 개발)</li>
-                            <li class="main-intro-sub-item">- 한국산업기술대학 (현 한국공학대학)</li>
+                            <li class="main-intro-sub-item">- 한국산업기술대학교</li>
                             <!-- <li class="main-intro-sub-item">- UI/UX 엔지니어링 및 응용 SW엔지니어링 양성과정 수료</li> -->
                         </ul>
                     </li>
@@ -124,56 +124,104 @@
                     About
                 </h2>
                 <div class="aboutme-wrap">
-                    <div class="aboutme-profile"  data-aos-delay="200" data-aos-duration="1000" data-aos="fade-left">
+                    <div class="aboutme-profile" data-aos-delay="200" data-aos-duration="1000" data-aos="fade-right">
                         <img src="./image/tempimage.png" alt="">
                     </div>
-                    <div class="aboutme-text"  data-aos-delay="300" data-aos-duration="1000" data-aos="fade-left">
-                        <div class="info">
+                    <div class="aboutme-text">
+                        <div class="info" data-aos-delay="300" data-aos-duration="1000" data-aos="fade-left">
                             <div class="tag">Info</div>
                             <div class="ml-3">
-                                <strong>김민철</strong> <font size="4">(1994. 12. 31)</font>
+                                <strong>김민철</strong>
+                                <font size="4">(1994. 12. 31)</font>
+                                <font class="d-block" size="4">mincheo.kmc@gmail.com</font>
                             </div>
+                            <hr>
                         </div>
-                        <hr>
-                        <div class="skills">
+                        <div class="skills" data-aos-delay="400" data-aos-duration="1000" data-aos="fade-left">
                             <div class="tag">Skills</div>
                             <div class="ml-3">
-                                <span class="skill-text">Html, Css, Scss, Javascript, Photoshop, Illustrator, AutoCad, 3dMax, Sketchup
+                                <span class="skills-wrap">
+                                    <div class="skill-elem d-inline-block">
+                                        <img src="./image/htmlImg.png" alt="">
+                                        <h6>Html</h6>
+                                    </div>
+                                    <div class="skill-elem d-inline-block">
+                                        <img src="./image/cssImg.png" alt="">
+                                        <h6>Css</h6>
+                                    </div>
+                                    <div class="skill-elem d-inline-block">
+                                        <img src="./image/jsImg.png" alt="">
+                                        <h6>Javascript</h6>
+                                    </div>
+                                    <div class="skill-elem d-inline-block">
+                                        <img src="./image/photoshop.png" alt="">
+                                        <h6>Photoshop</h6>
+                                    </div>
+                                    <div class="skill-elem d-inline-block">
+                                        <img src="./image/illustrator.png" alt="">
+                                        <h6>Illustrator</h6>
+                                    </div>
+                                    <div class="skill-elem d-inline-block">
+                                        <img src="./image/autocadImg.png" alt="">
+                                        <h6>AutoCad</h6>
+                                    </div>
+                                    <div class="skill-elem d-inline-block">
+                                        <img src="./image/3dmaxImg.png" alt="">
+                                        <h6>3dMax</h6>
+                                    </div>
+                                    <div class="skill-elem d-inline-block">
+                                        <img src="./image/sketchupImg.png" alt="">
+                                        <h6>Sketchup</h6>
+                                    </div>
+                                    <!-- Html, Css, Scss, Javascript, Photoshop, Illustrator, AutoCad, 3dMax, Sketchup -->
+                                </span>
                             </div>
+                            <hr>
                         </div>
-                        <hr>
-                        <div class="license">
-                            <div class="tag">License</div>
-                            <div class="ml-3">
-                                <div class="get-date">2023. 01</div>
-                                <span class="get-name">GTQ 1급 </span> <font size="2" color="gray">한국생산성본부</font>
-                                <div class="get-date">2022. 12</div>
-                                <span class="get-name">ATC캐드마스터 2급 (CAT 2급)</span> <font size="2" color="gray">한국생산성본부</font>
-                                <div class="get-date">2022. 11</div>
-                                <span class="get-name">ATC캐드마스터 1급 (ATC 1급)</span> <font size="2" color="gray">한국생산성본부</font>
-                                <div class="get-date">2022. 06</div>
-                                <span class="get-name">웹디자인기능사필기 <font size="3">(23. 03 실기예정)</font></span> <font size="2" color="gray">한국산업인력공단</font>
-                                <div class="get-date">2022. 03</div>
-                                <span class="get-name">정보처리기사필기 <font size="3">(23. 04 실기예정)</font></span> <font size="2" color="gray">한국산업인력공단</font>
-                                <div class="get-date">2013. 11</div>
-                                <span class="get-name">2종보통운전면허</span>
-                                <!-- <font size="2" color="gray">한국산업인력공단</font> -->
+                        <div class="d-flex" data-aos-delay="500" data-aos-duration="1000" data-aos="fade-left">
+                            <div class="license">
+                                <div class="tag">License</div>
+                                <div class="ml-3">
+                                    <div class="get-date d-inline-block">2023. 01</div>
+                                    <font size="2" color="gray">(한국생산성본부)</font>
+                                    <div class="get-name d-block">GTQ 1급 </div>
+                                    <div class="get-date">2022. 12</div>
+                                    <font size="2" color="gray">(한국생산성본부)</font>
+                                    <div class="get-name">ATC캐드마스터 2급 (CAT 2급)</div>
+                                    <div class="get-date">2022. 11</div>
+                                    <font size="2" color="gray">(한국생산성본부)</font>
+                                    <div class="get-name">ATC캐드마스터 1급 (ATC 1급)</div>
+                                    <div class="get-date">2022. 06</div>
+                                    <font size="2" color="gray">(한국산업인력공단)</font>
+                                    <div class="get-name">웹디자인기능사필기 <font size="3">(23. 03 실기예정)</font>
+                                    </div>
+                                    <div class="get-date">2022. 03</div>
+                                    <font size="2" color="gray">(한국산업인력공단)</font>
+                                    <div class="get-name">정보처리기사필기 <font size="3">(23. 04 실기예정)</font>
+                                    </div>
+                                    <div class="get-date">2013. 11</div>
+                                    <div class="get-name">2종보통운전면허</div>
+                                    <!-- <font size="2" color="gray">한국산업인력공단</font> -->
+                                </div>
                             </div>
-                        </div>
-                        <hr>
-                        <div class="education">
-                            <div class="tag">Education</div>
-                            <div class="ml-3">
-                                <div class="get-date">2022. 09 ~ 2023. 03</div>
-                                <span class="get-name">환경인테리어디자인 (AutoCad, 3dMax, Sketchup) 수료예정</span> <font size="2" color="gray">라인컴퓨터아트</font>
-                                <div class="get-date">2022. 08 ~ 2022. 09</div>
-                                <span class="get-name">빠른설계를위한 AutoCad 수료(단기)</span> <font size="2" color="gray">그린컴퓨터아카데미</font>
-                                <div class="get-date">2019. 01 ~ 2019. 07</div>
-                                <span class="get-name">UI/UX엔지니어링 및 응용 sw엔지니어링 양성과정 수료</span> <font size="2" color="gray">비트캠프</font>
-                                <div class="get-date">2013. 03 ~ 2019. 02</div>
-                                <span class="get-name">한국산업기술대학교 학사</span>
-                                <div class="get-date">2010. 03 ~ 2013. 02</div>
-                                <span class="get-name">덕소고등학교 졸업</span>
+                            <div class="verticle-line"></div>
+                            <div class="education">
+                                <div class="tag">Education</div>
+                                <div class="ml-3">
+                                    <div class="get-date">2022. 09 ~ 2023. 03</div>
+                                    <font size="2" color="gray">(라인컴퓨터아트)</font>
+                                    <span class="get-name">환경인테리어디자인 (AutoCad, 3dMax, Sketchup) 수료예정</span>
+                                    <div class="get-date">2022. 08 ~ 2022. 09</div>
+                                    <font size="2" color="gray">(그린컴퓨터아카데미)</font>
+                                    <span class="get-name">빠른설계를위한 AutoCad 수료(단기)</span>
+                                    <div class="get-date">2019. 01 ~ 2019. 07</div>
+                                    <font size="2" color="gray">(비트캠프)</font>
+                                    <span class="get-name">UI/UX엔지니어링 및 응용 sw엔지니어링 양성과정 수료</span>
+                                    <div class="get-date">2013. 03 ~ 2019. 02</div>
+                                    <span class="get-name">한국산업기술대학교(현 한국공학대학교) 학사</span>
+                                    <div class="get-date">2010. 03 ~ 2013. 02</div>
+                                    <span class="get-name">덕소고등학교 졸업</span>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -184,7 +232,8 @@
             <article id="exp_pro" class="article-box pf-exprience">
                 <h2 class="article-title" data-aos-delay="100" data-aos-duration="1000" data-aos="fade-right">
                     <!-- <span>02.</span> -->
-                    <div>Experience</div><div style="margin-left:15rem">& Project</div>
+                    <div>Experience</div>
+                    <div style="margin-left:15rem">& Project</div>
                 </h2>
                 <div class="exprience-wrap" data-aos-delay="200" data-aos-duration="1000" data-aos="fade-up">
                     <div class="exprience-list">
