--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <style>
 
     </style>
-    <title>Document</title>
+    <title>Mc's Portfolio</title>
 </head>
 
 <body>
@@ -33,16 +33,16 @@
             <nav>
                 <ol class="d-flex align-items-center">
                     <li class="nav-item active" data-aos-delay="150" data-aos="fade-down"><a class="cursor-pointer"
-                            data-target="main" onclick="moveEvent(this)"><span>01</span>
-                            <h5>Main</h5>
+                            data-target="main" onclick="moveEvent(this)"><span class="num">01</span>
+                            <span class="nav-text">Main</span>
                         </a></li>
                     <li class="nav-item" data-aos-delay="300" data-aos="fade-down"><a class="cursor-pointer"
-                            data-target="about" onclick="moveEvent(this)"><span>02</span>
-                            <h5>About</h5>
+                            data-target="about" onclick="moveEvent(this)"><span class="num">02</span>
+                            <span class="nav-text">About</span>
                         </a></li>
                     <li class="nav-item" data-aos-delay="450" data-aos="fade-down"><a class="cursor-pointer"
-                            data-target="exp_pro" onclick="moveEvent(this)"><span>03</span>
-                            <h5>Experience & Project</h5>
+                            data-target="exp_pro" onclick="moveEvent(this)"><span class="num">03</span>
+                            <span class="nav-text">Experience & Project</span>
                         </a></li>
                 </ol>
             </nav>
@@ -124,19 +124,36 @@
                     About
                 </h2>
                 <div class="aboutme-wrap">
-                    <div class="aboutme-profile" data-aos-delay="200" data-aos-duration="1000" data-aos="fade-right">
-                        <img src="./image/tempimage.png" alt="">
+                    <div class="aboutme-profile mr-4 text-center" data-aos-delay="200" data-aos-duration="1000" data-aos="fade-right">
+                        <div class="pc-photo w-75">
+                            <img class="photo" src="./image/mincheol.jpg" alt="">
+                        </div>
+                        <div class="mobile-photo w-75 hidden">
+                            <div class="photo-back"></div>
+                            <img class="photo id-photo" src="./image/증명사진.jpg" alt="">
+                        </div>
                     </div>
                     <div class="aboutme-text">
                         <div class="info" data-aos-delay="300" data-aos-duration="1000" data-aos="fade-left">
                             <div class="tag">Info</div>
                             <div class="ml-3">
-                                <strong>김민철</strong>
-                                <font size="4">(1994. 12. 31)</font>
-                                <font class="d-block" size="4">mincheo.kmc@gmail.com</font>
+                                <div class="d-flex align-items-center mb-2">
+                                    <i class="ri-user-fill mr-2"></i>
+                                    <font size="4">김민철(1994. 12. 31)</font>
+                                </div>
+                                <div class="d-flex align-items-center mb-2">
+                                    <i class="ri-map-pin-2-fill mr-2"></i>
+                                    <font class="d-block" size="4">경기도 시흥시 옥구천동로420</font>
+                                </div>
+                                <div class="d-flex align-items-center mb-2">
+                                    <i class="ri-mail-fill mr-2"></i>
+                                    <a href="https://mail.google.com/mail/?view=cm&fs=1&to=mincheol.kmc@gmail.com" target="_blank">
+                                        <font class="d-block" size="4">mincheol.kmc@gmail.com</font>
+                                    </a>
+                                </div>
                             </div>
-                            <hr>
                         </div>
+                        <hr data-aos-delay="350" data-aos-duration="1000" data-aos="fade-left">
                         <div class="skills" data-aos-delay="400" data-aos-duration="1000" data-aos="fade-left">
                             <div class="tag">Skills</div>
                             <div class="ml-3">
@@ -176,31 +193,31 @@
                                     <!-- Html, Css, Scss, Javascript, Photoshop, Illustrator, AutoCad, 3dMax, Sketchup -->
                                 </span>
                             </div>
-                            <hr>
                         </div>
+                        <hr data-aos-delay="450" data-aos-duration="1000" data-aos="fade-left">
                         <div class="d-flex" data-aos-delay="500" data-aos-duration="1000" data-aos="fade-left">
                             <div class="license">
                                 <div class="tag">License</div>
                                 <div class="ml-3">
                                     <div class="get-date d-inline-block">2023. 01</div>
                                     <font size="2" color="gray">(한국생산성본부)</font>
-                                    <div class="get-name d-block">GTQ 1급 </div>
+                                    <div class="get-name d-block">> GTQ 1급 </div>
                                     <div class="get-date">2022. 12</div>
                                     <font size="2" color="gray">(한국생산성본부)</font>
-                                    <div class="get-name">ATC캐드마스터 2급 (CAT 2급)</div>
+                                    <div class="get-name">> ATC캐드마스터 2급 (CAT 2급)</div>
                                     <div class="get-date">2022. 11</div>
                                     <font size="2" color="gray">(한국생산성본부)</font>
-                                    <div class="get-name">ATC캐드마스터 1급 (ATC 1급)</div>
+                                    <div class="get-name">> ATC캐드마스터 1급 (ATC 1급)</div>
                                     <div class="get-date">2022. 06</div>
                                     <font size="2" color="gray">(한국산업인력공단)</font>
-                                    <div class="get-name">웹디자인기능사필기 <font size="3">(23. 03 실기예정)</font>
+                                    <div class="get-name">> 웹디자인기능사필기 <font size="3">(23. 03 실기예정)</font>
                                     </div>
                                     <div class="get-date">2022. 03</div>
                                     <font size="2" color="gray">(한국산업인력공단)</font>
-                                    <div class="get-name">정보처리기사필기 <font size="3">(23. 04 실기예정)</font>
+                                    <div class="get-name">> 정보처리기사필기 <font size="3">(23. 04 실기예정)</font>
                                     </div>
                                     <div class="get-date">2013. 11</div>
-                                    <div class="get-name">2종보통운전면허</div>
+                                    <div class="get-name">> 2종보통운전면허</div>
                                     <!-- <font size="2" color="gray">한국산업인력공단</font> -->
                                 </div>
                             </div>
@@ -208,19 +225,19 @@
                             <div class="education">
                                 <div class="tag">Education</div>
                                 <div class="ml-3">
-                                    <div class="get-date">2022. 09 ~ 2023. 03</div>
+                                    <!-- <div class="get-date">2022. 09 ~ 2023. 03</div>
                                     <font size="2" color="gray">(라인컴퓨터아트)</font>
-                                    <span class="get-name">환경인테리어디자인 (AutoCad, 3dMax, Sketchup) 수료예정</span>
+                                    <span class="get-name">> 환경인테리어디자인 (AutoCad, 3dMax, Sketchup) 수료예정</span> -->
                                     <div class="get-date">2022. 08 ~ 2022. 09</div>
                                     <font size="2" color="gray">(그린컴퓨터아카데미)</font>
-                                    <span class="get-name">빠른설계를위한 AutoCad 수료(단기)</span>
+                                    <span class="get-name">> 빠른설계를위한 AutoCad</span>
                                     <div class="get-date">2019. 01 ~ 2019. 07</div>
                                     <font size="2" color="gray">(비트캠프)</font>
-                                    <span class="get-name">UI/UX엔지니어링 및 응용 sw엔지니어링 양성과정 수료</span>
+                                    <span class="get-name">> UI/UX엔지니어링 및 응용 sw엔지니어링 양성과정</span>
                                     <div class="get-date">2013. 03 ~ 2019. 02</div>
-                                    <span class="get-name">한국산업기술대학교(현 한국공학대학교) 학사</span>
+                                    <span class="get-name">> 한국산업기술대학교(현 한국공학대학교) 학사</span>
                                     <div class="get-date">2010. 03 ~ 2013. 02</div>
-                                    <span class="get-name">덕소고등학교 졸업</span>
+                                    <span class="get-name">> 덕소고등학교 졸업</span>
                                 </div>
                             </div>
                         </div>
@@ -232,8 +249,10 @@
             <article id="exp_pro" class="article-box pf-exprience">
                 <h2 class="article-title" data-aos-delay="100" data-aos-duration="1000" data-aos="fade-right">
                     <!-- <span>02.</span> -->
-                    <div>Experience</div>
-                    <div style="margin-left:15rem">& Project</div>
+                    <div class="exp-title">
+                        <div>Experience</div>
+                        <div style="margin-left:15rem">& Project</div>
+                    </div>
                 </h2>
                 <div class="exprience-wrap" data-aos-delay="200" data-aos-duration="1000" data-aos="fade-up">
                     <div class="exprience-list">
