--- a/index.html
+++ b/index.html
@@ -124,7 +124,8 @@
                     About
                 </h2>
                 <div class="aboutme-wrap">
-                    <div class="aboutme-profile mr-4 text-center" data-aos-delay="200" data-aos-duration="1000" data-aos="fade-right">
+                    <div class="aboutme-profile mr-4 text-center" data-aos-delay="200" data-aos-duration="1000"
+                        data-aos="fade-right">
                         <div class="pc-photo w-75">
                             <img class="photo" src="./image/mincheol.jpg" alt="">
                         </div>
@@ -147,7 +148,8 @@
                                 </div>
                                 <div class="d-flex align-items-center mb-2">
                                     <i class="ri-mail-fill mr-2"></i>
-                                    <a href="https://mail.google.com/mail/?view=cm&fs=1&to=mincheol.kmc@gmail.com" target="_blank">
+                                    <a href="https://mail.google.com/mail/?view=cm&fs=1&to=mincheol.kmc@gmail.com"
+                                        target="_blank">
                                         <font class="d-block" size="4">mincheol.kmc@gmail.com</font>
                                     </a>
                                 </div>
